adds changes for visual rebranding

--- a/polishness/templates/polishness/archeological-monuments.html
+++ b/polishness/templates/polishness/archeological-monuments.html
@@ -15,6 +15,12 @@ poznajmypolske.pl
         border: 2px solid #000;
     }
 
+    /* Ustawia wysokość na 100% dla całego dokumentu */
+    html, body {
+        height: 100%;
+        margin: 0;
+        background-color: #F5F5DC;
+    }
 
 {% endblock %}
 
