--- a/polishness/templates/polishness/nature_single_ai.html
+++ b/polishness/templates/polishness/nature_single_ai.html
@@ -30,10 +30,13 @@ poznajmypolske.pl
     }
 
 
-    .card h5 {
-        background-color: #F5DECF;
-    }
 
+    /* Ustawia wysokość na 100% dla całego dokumentu */
+    html, body {
+        height: 100%;
+        margin: 0;
+        background-color: #F5F5DC;
+    }
 
 {% endblock %}
 
