--- a/polishness/templates/polishness/poland_in_numbers.html
+++ b/polishness/templates/polishness/poland_in_numbers.html
@@ -11,6 +11,12 @@ poznajmypolske.pl
         box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
     }
 
+        /* Ustawia wysokość na 100% dla całego dokumentu */
+        html, body {
+            height: 100%;
+            margin: 0;
+            background-color: #F5F5DC;
+        }
 
 
 {% endblock %}
