--- a/polishness/templates/polishness/monument_single_archeo.html
+++ b/polishness/templates/polishness/monument_single_archeo.html
@@ -28,6 +28,13 @@ poznajmypolske.pl
         background-color: #E6E6FA; /* Mniej intensywny, delikatny niebieski */
     }
 
+    /* Ustawia wysokość na 100% dla całego dokumentu */
+    html, body {
+        height: 100%;
+        margin: 0;
+        background-color: #F5F5DC;
+    }
+
 
 {% endblock %}
 
