--- a/polishness/templates/polishness/monument_single_archeo_ai.html
+++ b/polishness/templates/polishness/monument_single_archeo_ai.html
@@ -25,6 +25,13 @@ poznajmypolske.pl
         border: 2px solid #000;
     }
 
+    /* Ustawia wysokość na 100% dla całego dokumentu */
+    html, body {
+        height: 100%;
+        margin: 0;
+        background-color: #F5F5DC;
+    }
+
 {% endblock %}
 
 {% block content %}
