--- a/polishness/templates/polishness/monument_single_photos.html
+++ b/polishness/templates/polishness/monument_single_photos.html
@@ -37,6 +37,12 @@ poznajmypolske.pl
      }
     }
 
+    /* Ustawia wysokość na 100% dla całego dokumentu */
+    html, body {
+        height: 100%;
+        margin: 0;
+        background-color: #F5F5DC;
+    }
 
 
 {% endblock %}
