--- a/polishness/templates/polishness/monuments.html
+++ b/polishness/templates/polishness/monuments.html
@@ -31,6 +31,14 @@ poznajmypolske.pl
     font-size: 16px;
   }
 
+    /* Ustawia wysokość na 100% dla całego dokumentu */
+    html, body {
+        height: 100%;
+        margin: 0;
+        background-color: #F5F5DC;
+    }
+
+
 {% endblock %}
 
 
