--- a/polishness/templates/polishness/nature_single.html
+++ b/polishness/templates/polishness/nature_single.html
@@ -41,6 +41,13 @@ poznajmypolske.pl
         height: 100%;
     }
 
+    /* Ustawia wysokość na 100% dla całego dokumentu */
+    html, body {
+        height: 100%;
+        margin: 0;
+        background-color: #F5F5DC;
+    }
+
 {% endblock %}
 
 
