--- a/polishness/templates/polishness/poland_in_numbers_field_browser.html
+++ b/polishness/templates/polishness/poland_in_numbers_field_browser.html
@@ -4,6 +4,14 @@
 poznajmypolske.pl
 {% endblock %}
 
+{% block style %}
+        /* Ustawia wysokość na 100% dla całego dokumentu */
+        html, body {
+            height: 100%;
+            margin: 0;
+            background-color: #F5F5DC;
+        }
+{% endblock %}
 
 {% block content %}
 
