--- a/polishness/templates/polishness/poland_in_numbers_field_viewing.html
+++ b/polishness/templates/polishness/poland_in_numbers_field_viewing.html
@@ -120,6 +120,13 @@ poznajmypolske.pl
         width: 80px; /* Druga kolumna */
     }
 
+        /* Ustawia wysokość na 100% dla całego dokumentu */
+        html, body {
+            height: 100%;
+            margin: 0;
+            background-color: #F5F5DC;
+        }
+
 {% endblock %}
 
 
