--- a/polishness/templates/polishness/poland_in_numbers_fields.html
+++ b/polishness/templates/polishness/poland_in_numbers_fields.html
@@ -16,6 +16,14 @@ poznajmypolske.pl
         text-decoration: none;
     }
 
+        /* Ustawia wysokość na 100% dla całego dokumentu */
+        html, body {
+            height: 100%;
+            margin: 0;
+            background-color: #F5F5DC;
+        }
+
+
 {% endblock %}
 
 {% block content %}
