--- a/polishness/templates/polishness/press_news.html
+++ b/polishness/templates/polishness/press_news.html
@@ -88,6 +88,13 @@ poznajmypolske.pl
             color: #000;
         }
 
+        /* Ustawia wysokość na 100% dla całego dokumentu */
+        html, body {
+            height: 100%;
+            margin: 0;
+            background-color: #F5F5DC;
+        }
+
 {% endblock %}
 
 
