--- a/polishness/templates/polishness/home.html
+++ b/polishness/templates/polishness/home.html
@@ -75,6 +75,13 @@ body {
             text-align: left;
         }
 
+        .content-wrapper {
+            display: flex;
+        }
+        /* Ustawia body jako kontener flex */
+        body {
+            display: block;
+        }
 
 {% endblock %}
 
