adds cosmetic style improvements

--- a/polishness/templates/polishness/home.html
+++ b/polishness/templates/polishness/home.html
@@ -79,7 +79,7 @@ body {
             display: flex;
         }
         /* Ustawia body jako kontener flex */
-        body {
+        .body {
             display: block;
         }
 
@@ -134,10 +134,4 @@ body {
 
 {% block backgroundcontentend %}
         </div>
-{% endblock %}
-
-
-
-{% block script %}
-
 {% endblock %}
