adds background image to Poland in Numbers

--- a/polishness/templates/polishness/home.html
+++ b/polishness/templates/polishness/home.html
@@ -79,7 +79,7 @@ body {
             display: flex;
         }
         /* Ustawia body jako kontener flex */
-        .body {
+        body {
             display: block;
         }
 
