--- a/polishness/templates/polishness/poland_in_numbers.html
+++ b/polishness/templates/polishness/poland_in_numbers.html
@@ -1,4 +1,5 @@
 {% extends "polishness/base.html" %}
+{% load static %}
 
 {% block title %}
 poznajmypolske.pl
@@ -8,21 +9,76 @@ poznajmypolske.pl
     .card:hover {
         border-color: #007bff;
         transform: scale(1.05); /* Slightly enlarge the brand */
-        box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
-    }
+        box-shadow: 0px 0px 0px rgba(0, 0, 0, 1);
+}
 
-        /* Ustawia wysokość na 100% dla całego dokumentu */
-        html, body {
-            height: 100%;
-            margin: 0;
-            background-color: #F5F5DC;
-        }
+
+body {
+    display: block;
+    flex-direction: column;
+    font-family: 'Montserrat', sans-serif;
+}
+
+
+.background-div {
+    position: relative;
+    background-image: linear-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.5)), url({% static 'numbers.png' %});
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100vw;
+    z-index: 1;
+    display: block;
+    overflow-x: hidden; /* Zapobiega wychodzeniu zawartości poza ekran */
+}
+
+
+.content-wrapper {
+    flex: 1;
+    overflow-x: hidden; /* Zapobiega wychodzeniu zawartości poza ekran */
+}
+
+.container {
+    position: relative;
+    max-width: auto;
+    overflow-x: hidden; /* Zapobiega wychodzeniu zawartości poza ekran */
+}
+
+
+/* Stylizowanie treści */
+.content {
+    position: relative;
+    z-index: 2;
+    color: #000;
+    text-align: left;
+    flex: 1;
+    overflow-x: hidden; /* Zapobiega wychodzeniu zawartości poza ekran */
+}
+
+
 
 
 {% endblock %}
 
+
+
+
+
+
+{% block backgroundcontent %}
+<div class="background-div">
+
+{% endblock %}
+
+
+
+
+
+
 {% block content %}
-    <div class="row mt-3">
+<div class="content mt-2 ml-2 mr-5 px-1">
+    <div class="row mt-2">
         <div class="col">
             <h4 class="text-start">Celem tego miejsca jest umożliwienie przyjrzenia się Polsce z różnorakich perspektyw statystycznych. Do tego celu wykorzystywane są dane z <b>Dziedzinowych Baz Wiedzy</b> Głównego Urzędu Statystycznego. Dane przedstawiane są tutaj tabelarycznie, natomiast rozbudowany interfejs graficzny można znaleźć na stronie <b><a style="color: black;" href="https://dbw.stat.gov.pl/">GUSu</a></b>.</h4>
         </div>
@@ -47,18 +103,17 @@ poznajmypolske.pl
 
     <div class="row mt-2">
     {% for root_field in root_fields %}
-                     <div class="col-md-6 col-lg-4 py-2">
+                     <div class="col-10 col-lg-4 py-2 ml-3">
                         <div class="card box-shadow" style="border: 2px solid #000;">
 
-                            <div class="card-body">
-                                 <h3 class=""><a href="{% url 'polishness:poland_in_numbers_fields' root_field.field_id root_field.field_name %}">{{root_field.field_name}}</a></h3>
+                            <div class="card-body p-3 ml-3">
+                                 <h2 class=""><a href="{% url 'polishness:poland_in_numbers_fields' root_field.field_id root_field.field_name %}">{{root_field.field_name}}</a></h2>
                             </div>
                         </div>
                     </div>
 
     {% endfor %}
     </div>
-    <br>
     <hr>
 
     <div class="row mt-3">
@@ -80,4 +135,10 @@ poznajmypolske.pl
         </div>
     </div>
 
+</div>
+{% endblock %}
+
+
+{% block backgroundcontentend %}
+</div>
 {% endblock %}
