--- a/polishness/templates/polishness/press_news.html
+++ b/polishness/templates/polishness/press_news.html
@@ -1,4 +1,5 @@
 {% extends "polishness/base.html" %}
+{% load static %}
 
 {% block title %}
 poznajmypolske.pl
@@ -88,6 +89,22 @@ poznajmypolske.pl
             color: #000;
         }
 
+    .tvpinfo {
+            background-image: linear-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.1)), url({% static 'poland_flag.png' %});
+            background-size: cover; /* Dopasowanie do rozmiaru elementu */
+            background-position: center; /* Wyśrodkowanie */
+            background-repeat: no-repeat;
+            color: #000;
+        }
+    .tvpinfo:hover {
+            background-image: linear-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.1)), url({% static 'poland_flag.png' %});
+            background-size: cover; /* Dopasowanie do rozmiaru elementu */
+            background-position: center; /* Wyśrodkowanie */
+            background-repeat: no-repeat;
+            color: #000;
+        }
+
+
         /* Ustawia wysokość na 100% dla całego dokumentu */
         html, body {
             height: 100%;
@@ -121,6 +138,10 @@ poznajmypolske.pl
 
             <div style="text-align: right; border: None; padding: 10px; width: 200px; float: right;">
             <div style="display: flex; align-items: center; margin-bottom: 5px;">
+                <div class="tvpinfo" style="width: 20px; height: 20px; margin-right: 10px;"></div>
+                <span>TvpInfo</span>
+            </div>
+            <div style="display: flex; align-items: center; margin-bottom: 5px;">
                 <div style="width: 20px; height: 20px; background-color: #00283d; margin-right: 10px;"></div>
                 <span>Polsat</span>
             </div>
@@ -151,6 +172,19 @@ poznajmypolske.pl
     <div class="row">
     {% for news in press_news %}
                      <div class="col-lg-5 m-1">
+                        {% if news.publisher_nick == 'tvpinfo' %}
+                         <p>test</p>
+                         <div class="card mb-4 box-shadow {{news.publisher_nick}}" style="border: 2px solid #000; padding: 2px;">
+
+                            <div class="card-body">
+                                <div>
+                                    <h5 style="color: #000;"><a style="color: #000;" href="{{news.link}}">{{news.title}}</a></h5>
+                                    <small style="text-align: right; display: block;">{{news.publisher}}, {{news.when}}</small>
+                                </div>
+                            </div>
+                        </div>
+
+                        {% else %}
                         <div class="card mb-4 box-shadow {{news.publisher_nick}}" style="border: 2px solid #000; padding: 2px;">
 
                             <div class="card-body {{news.publisher_nick}}">
@@ -160,6 +194,7 @@ poznajmypolske.pl
                                 </div>
                             </div>
                         </div>
+                        {% endif %}
                     </div>
 
     {% endfor %}
