--- a/polishness/templates/polishness/contact.html
+++ b/polishness/templates/polishness/contact.html
@@ -26,11 +26,13 @@ poznajmypolske.pl
 
   input[type="text"]:focus {
         background-color: #d0e7f9;  /* Zmieniamy kolor tła */
+        title: "Proszę podać poprawny adres e-mail.";
   }
 
   input[type="email"] {
     color: #d0e7f9;
     background-color: #d0e7f9;
+    title: "Proszę podać poprawny adres e-mail.";
   }
 
   input[type="email"]:focus {
