--- a/polishness/templates/polishness/monument_single_archeo.html
+++ b/polishness/templates/polishness/monument_single_archeo.html
@@ -115,7 +115,7 @@ poznajmypolske.pl
 
             </div>
             <!-- Button with call-to-action -->
-                <a href="https://zabytek.pl/pl/obiekty/zabytek?inspire_id={{monument.library_id}}&rejestr=rejestr-zabytk%C3%B3w" class="btn btn-dark btn-lg mt-3" style="font-weight: bold; text-align: center;">Informacje na portalu zabytek.pl.</a>
+                <a href="https://zabytek.pl/pl/obiekty/zabytek?inspire_id={{monument.library_id}}&rejestr=rejestr-zabytk%C3%B3w" class="btn btn-dark btn-lg mt-3" style="font-weight: bold; text-align: center;" target="_blank" rel="noopener noreferrer">Informacje na portalu zabytek.pl.</a>
                 <a href="{% url 'polishness:monument_archeo_single_ai' monument.id %}" class="btn btn-dark btn-lg mt-1" style="font-weight: bold; text-align: center;">Zapytaj sztucznej inteligencji o więcej informacji.</a>
                 {% if monument.latitude and not monument.latitude == "nan" %}
                     {% if monument.longitude and not monument.longitude == "nan" %}
